--- a/src/Vernou.Swashbuckle/Vernou.Swashbuckle.csproj
+++ b/src/Vernou.Swashbuckle/Vernou.Swashbuckle.csproj
@@ -14,6 +14,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>aspnetcore;swagger;swashbuckle;webapi</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <!-- Source Link -->
@@ -26,7 +27,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+    <None Include="..\..\README.md" Pack="true" PackagePath="" />
+    <None Include="..\..\nuget\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
 
   <ItemGroup>
