feat(nuget): Add icon, package metadata and Source Link (#8)
Add package metadata and icon in csproj.
Configure Source Link in csproj.

Issues: #7
Pull Requests: #8

--- a/src/Vernou.Swashbuckle/Vernou.Swashbuckle.csproj
+++ b/src/Vernou.Swashbuckle/Vernou.Swashbuckle.csproj
@@ -4,8 +4,36 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <!-- NuGet Metadata -->
+  <PropertyGroup>
+    <AssemblyName>Vernou.Swashbuckle</AssemblyName>
+    <Authors>Cédric VERNOU</Authors>
+    <Version>1.0.0</Version>
+    <Description>Extends Swashbuckle.AspNetCore</Description>
+    <PackageProjectUrl>https://github.com/vernou/Vernou.Swashbuckle.HttpResultsAdapter</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>aspnetcore;swagger;swashbuckle;webapi</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>icon.png</PackageIcon>
+  </PropertyGroup>
+
+  <!-- Source Link -->
+  <PropertyGroup>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IncludeSymbols>true</IncludeSymbols>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/vernou/Vernou.Swashbuckle</RepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md" Pack="true" PackagePath="" />
+    <None Include="..\..\nuget\icon.png" Pack="true" PackagePath="" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
